# NeuLAND_Veto

./: README.md
R3BRoot_Source/: CMakeLists.txt  README.txt
R3BRoot_Source/Nveto_seg/: CMakeLists.txt  Nveto_segLinkDef.h  R3BNveto_seg.cxx  R3BNveto_seg.h  R3BNveto_segClusterFinder.cxx  R3BNveto_segClusterFinder.h  R3BNveto_segClusterMon.cxx  R3BNveto_segClusterMon.h  R3BNveto_segContFact.cxx  R3BNveto_segContFact.h  R3BNveto_segDigiMon.cxx  R3BNveto_segDigiMon.h  R3BNveto_segDigitizer.cxx  R3BNveto_segDigitizer.h  R3BNveto_segGeoPar.cxx  R3BNveto_segGeoPar.h  R3BNveto_segMCMon.cxx  R3BNveto_segMCMon.h  R3BNveto_segNeutron2DPar.cxx  R3BNveto_segNeutron2DPar.h  R3BNveto_segNeutronReconstruction.cxx  R3BNveto_segNeutronReconstruction.h  R3BNveto_segNeutronReconstructionEvaluation.cxx  R3BNveto_segNeutronReconstructionEvaluation.h  R3BNveto_segVisualizer.cxx  R3BNveto_segVisualizer.h  readme.md
R3BRoot_Source/Nveto_seg/clustering/: Neutron2DCalibr.cxx  Neutron2DCalibr.h  NvetoClustringEngine.cxx  NvetoClustringEngine.h
R3BRoot_Source/Nveto_seg/digitizing/: Digitizin_segEngine.cxx  Digitizin_segEngine.h  Validatd_seg.h
R3BRoot_Source/Nveto_seg/test/: testNvetoClustringEngine.cxx  testNveto_segNeutron2DPar.cxx
R3BRoot_Source/Nveto_seg/unpack/: R3BNveto_segPmt.cxx  R3BNveto_segPmt.h  R3BNveto_segTcal.cxx  R3BNveto_segTcal.h  R3BNveto_segTcalFill.cxx  R3BNveto_segTcalFill.h
R3BRoot_Source/geometry/: Nveto_seg_v12a_10m.geo.root  media_r3b.geo
R3BRoot_Source/land/: CMakeLists.txt  R3BNeutronCalibr2D.cxx  R3BNeutronCalibr2D.h  R3BNeutronTracker2D_MultCuts.cxx  R3BNeutronTracker2D_MultCuts.h
R3BRoot_Source/neuland/: CMakeLists.txt  NeulandLinkDef.h  R3BNeulandClusterFinder.cxx  R3BNeulandDigitizer.cxx  R3BNeulandDigitizrOld.h
R3BRoot_Source/r3bdata/: CMakeLists.txt  R3BDataLinkDef.h  R3BDetectorList.h  R3BMCTrack.cxx
R3BRoot_Source/veto_seg/: CMakeLists.txt  R3BGeoveto_seg.cxx  R3BGeoveto_seg.h  R3BGeoveto_segPar.cxx  R3BGeoveto_segPar.h  R3BNVeto_segCluster.cxx  R3BNVeto_segCluster.h  R3BNVeto_segClusterFinder.cxx  R3BNVeto_segClusterFinder.h  R3BNeutHt_seg.cxx  R3BNeutHt_seg.h  R3BNeutronCalib2D_seg.cxx  R3BNeutronCalib2D_seg.h  R3BNeutronTrak_segr2D_seg.cxx  R3BNeutronTrak_segr2D_seg.h  R3BNeutronTrak_segr_seg.cxx  R3BNeutronTrak_segr_seg.h  R3BPrimPat_seg.cxx  R3BPrimPat_seg.h  R3Bveto_seg.cxx  R3Bveto_seg.h  R3Bveto_segContFact.cxx  R3Bveto_segContFact.h  R3Bveto_segDigiPar.cxx  R3Bveto_segDigiPar.h  R3Bveto_segDigitizer.cxx  R3Bveto_segDigitizer.h  R3Bveto_segDigitizerQA.cxx  R3Bveto_segDigitizerQA.h  veto_segLinkDef.h
VetoSim/: Manual.txt
VetoSim/Exp/: 1000MeV_Bars.cpp  1000MeV_Cluster.cpp  1000MeV_Tracker.cpp  4n.cpp  (+32 more)
(+591 files in other folders)
